made tab turn blue on new message and sort of fixed the scrollbar to the bottom a bit more.

--- a/static/style.css
+++ b/static/style.css
@@ -123,6 +123,10 @@ a:hover {
 #chatbox {
 	display: flex;
   flex-direction: column;
+  overflow-x: hidden;
+  overflow-y: auto;
+/* transform: rotate(180deg); */
+/* direction:rtl; */
 }
 
 #sendbox {
